@@ -1,3 +1,4 @@
+    - added API method members_destroy_all with alias remove_list_members
     - added deprecation warning for 'trends'; calls trends_location(1), instead
 
 3.18001 2011-09-29
